--- a/RandomEventsLab8/Form1.resx
+++ b/RandomEventsLab8/Form1.resx
@@ -117,7 +117,39 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="Chance.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
+  <data name="labelTest1Text.Text" xml:space="preserve">
+    <value>@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&amp;**@@@@@@@@@@@@***@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&amp;**,@@@@@@@@@@****@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@%**@@@@@@@@@@@&amp;***,@@@@@@@@*****@@@@@@@@@@@**(@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@#*,,(@@@@@@@@&amp;****,@@@@@@******@@@@@@@@@*,**@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@/***.*@@@@@@&amp;***,,,@@@@,,,,***@@@@@@*.****@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@@@****,,(@@@,,,,,,,,,,.,,,,,,,@@@@,,*****@@@@@@@@@@@@@@@@@@@@
+@@@@@@@**@@@@@@@@@@@@&amp;**,,,,,..,,,,,,,@@@,,,,,,,,...,,,,,**@@@@@@@@@@@@@*%@@@@@@
+@@@@@@@@***.,**@@@@@@@%,,,,,,&amp;@@@@@@,,,,,,,@@@@@@@,,,,,,,,@@@@@@@**,.,**@@@@@@@@
+@@@@@@@@@@@*****,..,,,.,,,@@@,,,,,...........,,,,,@@@@,,,,,,,,.,******@@@@@@@@@@
+@@@@@@@@@@@@@****,,,,,,@@@,,,...,,,,,,,,,,,,,,,...,,,@@@,,,,,,,,***@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@,,,,,@@(,,..,,,,,,,,,,,,,,,,,,,,,,,..,,,@@,,,,,,,@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@,,,@@,,.,,,,,,,,,,,.......,,,,,,,,,,,.,,@@@,,,#@@@@@@@@@@@@@@@@
+@**............,,,%@@,,.,,,,,,,,...............,,,,,,,,.,,#@@,,,,............**&amp;
+@@@@@@*******,,,,,@@,,.,,,,,,,,..................,,,,,,,.,,@@&amp;,,,,,*******@@@@@@
+@@@@@@@@@@@@,,,,,(@/,,,,,,,,,,....................,,,,,,,,,&amp;@@,,,,,,@@@@@@@@@@@@
+@@@@@@@@@@@@@@@,,@@/,,,,,,,,,.....................,,,,,,,,,,@@,,,@@@@@@@@@@@@@@@
+@@@@@@@@@@@*,.,,,(@@,,,,,,,,,,....................,,,,,,,,,&amp;@@,,,,.,*@@@@@@@@@@@
+@@@@@**,.****,,,,,@@,,,,,,,,,,,.................,,,,,,,,,,,@@,,,,,,****,.,*@@@@@
+@**,**********,,,,,@@,,,,,,,,,,,,.............,,,,,,,,,,,,@@@,,,,,,************&amp;
+@@@@@@@@@@@@@@@@@,,,@@,,,,,,,,,,,,,,,.....,,,,,,,,,,,,,,,@@/,,,#@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@*.,,,,@@@,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,@@@,,,,,,,@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@*,**,,,,,,#@@,,,,,,,,,,,,,,,,,,,,,,,,,,,@@@,,,,,,,**,,(@@@@@@@@@@@@
+@@@@@@@@@@*.*******,@@,,,,@@@@,,,,,,,,,,,,,,,,,,,@@@@,.,,,#@********.*@@@@@@@@@@
+@@@@@@@@*,****@@@@@@@@%,,,,,.,@@@@@@@@@@@@@@@@@@@,.,,,,,,,@@@@@@@@@*****(@@@@@@@
+@@@@@@@@@@@@@@@@@@@@@&amp;,*,,,,,,,,,,...,,,,,....,,,,,,,,,,*,,@@@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@@*,*****@@@@&amp;,,,,,,,,,,,,,,,,,@@@@*******@@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@/*****@@@@@@&amp;*****,@@@@,,****,@@@@@@@*****@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@****@@@@@@@@@&amp;*****@@@@@@#*****@@@@@@@@@****@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@%**@@@@@@@@@@@&amp;****@@@@@@@@/****@@@@@@@@@@@@*(@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&amp;***@@@@@@@@@@****@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@&amp;**@@@@@@@@@@@@***@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+</value>
+  </data>
 </root>
